@@ -1,3 +1,4 @@
+ - Speedup assembly over exterior facets by not using BoundaryMesh
  - Mesh refinement improvements, remove unecessary copying in Python interface
  - Clean PETSc and Epetra Krylov solvers
  - Add separate preconditioner classes for PETSc and Epetra solvers
